section expo add

--- a/index.html
+++ b/index.html
@@ -18,26 +18,37 @@
             </a>
         </div>
         <ul class="nav_links">
-            <li><a href="#">Accueil</a></li>
-            <li><a href="#aboutMe">A propos</a></li>
-            <li><a href="#mySkills">Compétences</a></li>
-            <li><a href="#work">Services</a></li>
-            <li><a href="#projects">Projets</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#home">Accueil</a></li>
+            <li><a href="#expo">Exposition</a></li>
+            <li><a href="#">Personnel</a></li>
+            <li><a href="#">Avis</a></li>
+            <li><a href="#">FAQ</a></li>
         </ul>
         <ul class="nav_links">
-            <li><a href="" class="login">Log in</a></li>
+            <li><a href="" class="login">Contactez-nous</a></li>
             <li><a href="" class="signup btn">Billeterie</a></li>
         </ul>
     </header>
 
     <section id="home">
         <div class="ads">
-            <p>Exposition</p> <hr> <a href="">Consulter <i class="fa-solid fa-arrow-right"></i></a>
+            <p><i class="fa-solid fa-crosshairs"></i> Exposition : 8 avril 2024</p>
+            <hr>
+            <a href="">Consulter <i class="fa-solid fa-arrow-right"></i></a>
         </div>
         <h1>Bienvenue à notre exposition captivante.</h1>
-        <p>Préparez-vous à un voyage dans le temps qui célèbre le passé, le présent et l'avenir passionnant de l'informatique.</p>
-        <a href="#" class="btn">Billeterie <i class="fa-solid fa-chevron-right"></i></a>
+        <p class="desc">Préparez-vous à un voyage dans le temps qui célèbre le passé, le présent et l'avenir passionnant
+            de l'informatique.</p>
+        <a href="#" class="btn">Prendre ma place <i class="fa-solid fa-chevron-right"></i></a>
+    </section>
+
+    <section id="expo">
+        <div class="column">
+            <h1>Bienvenue à notre exposition captivante.</h1>
+            <p class="desc"><span>gvd.</span>Préparez-vous à un voyage dans le temps qui célèbre le passé, le présent et
+                l'avenir passionnant de l'informatique.</p>
+        </div>
+        <div class="rectangle"></div>
     </section>
 </body>
 
