other pages add

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <ul class="nav_links">
             <li><a href="#home">Accueil</a></li>
             <li><a href="#expo">Exposition</a></li>
-            <li><a href="#">Personnel</a></li>
-            <li><a href="#">Avis</a></li>
+            <li><a href="#personnel">Personnel</a></li>
+            <li><a href="#avis">Avis</a></li>
             <li><a href="#">FAQ</a></li>
         </ul>
         <ul class="nav_links">
@@ -34,7 +34,7 @@
         <div class="ads">
             <p><i class="fa-solid fa-crosshairs"></i> Exposition : 8 avril 2024</p>
             <hr>
-            <a href="">Consulter <i class="fa-solid fa-arrow-right"></i></a>
+            <a href="#expo">Consulter <i class="fa-solid fa-arrow-right"></i></a>
         </div>
         <h1>Bienvenue à notre exposition captivante.</h1>
         <p class="desc">Préparez-vous à un voyage dans le temps qui célèbre le passé, le présent et l'avenir passionnant
@@ -44,11 +44,136 @@
 
     <section id="expo">
         <div class="column">
-            <h1>Bienvenue à notre exposition captivante.</h1>
-            <p class="desc"><span>gvd.</span>Préparez-vous à un voyage dans le temps qui célèbre le passé, le présent et
-                l'avenir passionnant de l'informatique.</p>
+            <h1>Une exposition, <br> un voyage.</h1>
+            <p class="desc"><span>Description.</span>Cette exposition est un voyage fascinant à travers les époques qui
+                retrace
+                l'évolution extraordinaire des machines et des technologies qui ont façonné notre monde numérique
+                d'aujourd'hui.</p>
         </div>
         <div class="rectangle"></div>
+    </section>
+
+    <section id="personnel">
+        <h1>Derrière une exposition, un personnel</h1>
+        <div class="grid">
+            <div class="item">
+                <h3>Raphaël Brachais</h3>
+                <p>Organisateur</p>
+            </div>
+            <div class="item">
+                <h3>Titouan Helbert</h3>
+                <p>Organisateur</p>
+            </div>
+            <div class="item">
+                <h3>Natalia Ros</h3>
+                <p>Organisateur</p>
+            </div>
+            <div class="item">
+                <h3>Shun Von Lunen</h3>
+                <p>Organisateur</p>
+            </div>
+            <div class="item">
+                <h3>Jean-Paul Carrara</h3>
+                <p>Chercheur expert</p>
+            </div>
+            <div class="item">
+                <h3>Nom</h3>
+                <p>Volontaires</p>
+            </div>
+            <div class="item">
+                <h3>Nom</h3>
+                <p>Volontaires</p>
+            </div>
+            <div class="item">
+                <h3>Nom</h3>
+                <p>Volontaires</p>
+            </div>
+        </div>
+    </section>
+
+    <section id="avis">
+        <h1>Appréciée par le plus grand nombre</h1>
+        <div class="row">
+            <div class="column">
+                <div class="card">
+                    <img src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8cmFuZG9tJTIwcGVvcGxlfGVufDB8fDB8fHww"
+                        alt="photo de profile">
+                    <div class="column">
+                        <div class="row">
+                            <p class="nom">Nom</p>
+                            <p class="aro">@nom</p>
+                            <i class="fa-solid fa-circle"></i>
+                            <p class="date">11 Juin</p>
+                        </div>
+                        <p class="message">Lorem ipsum dolor sit, <span>@vthi</span> consectetur adipisicing elit. Non,
+                            nemo numquam
+                            deserunt itaque atque est! In placeat nemo dignissimos?</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8cmFuZG9tJTIwcGVvcGxlfGVufDB8fDB8fHww"
+                        alt="photo de profile">
+                    <div class="column">
+                        <div class="row">
+                            <p class="nom">Nom</p>
+                            <p class="aro">@nom</p>
+                            <i class="fa-solid fa-circle"></i>
+                            <p class="date">11 Juin</p>
+                        </div>
+                        <p class="message">Lorem ipsum dolor sit, <span>@vthi</span> consectetur adipisicing elit. Non,
+                            nemo numquam
+                            deserunt itaque atque est! In placeat nemo dignissimos?</p>
+                    </div>
+                </div>
+            </div>
+            <div class="column">
+                <div class="card">
+                    <img src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8cmFuZG9tJTIwcGVvcGxlfGVufDB8fDB8fHww"
+                        alt="photo de profile">
+                    <div class="column">
+                        <div class="row">
+                            <p class="nom">Nom</p>
+                            <p class="aro">@nom</p>
+                            <i class="fa-solid fa-circle"></i>
+                            <p class="date">11 Juin</p>
+                        </div>
+                        <p class="message">Lorem ipsum dolor sit, <span>@vthi</span> consectetur adipisicing elit. Non,
+                            nemo numquam
+                            deserunt itaque atque est! In placeat nemo dignissimos?</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8cmFuZG9tJTIwcGVvcGxlfGVufDB8fDB8fHww"
+                        alt="photo de profile">
+                    <div class="column">
+                        <div class="row">
+                            <p class="nom">Nom</p>
+                            <p class="aro">@nom</p>
+                            <i class="fa-solid fa-circle"></i>
+                            <p class="date">11 Juin</p>
+                        </div>
+                        <p class="message">Lorem ipsum dolor sit, <span>@vthi</span> consectetur adipisicing elit. Non,
+                            nemo numquam
+                            deserunt itaque atque est! In placeat nemo dignissimos?</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8cmFuZG9tJTIwcGVvcGxlfGVufDB8fDB8fHww"
+                        alt="photo de profile">
+                    <div class="column">
+                        <div class="row">
+                            <p class="nom">Nom</p>
+                            <p class="aro">@nom</p>
+                            <i class="fa-solid fa-circle"></i>
+                            <p class="date">11 Juin</p>
+                        </div>
+                        <p class="message">Lorem ipsum dolor sit, <span>@vthi</span> consectetur adipisicing elit. Non,
+                            nemo numquam
+                            deserunt itaque atque est! In placeat nemo dignissimos?</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 </body>
 
