card design update

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
     <section id="avis">
         <h1>Appréciée par le plus grand nombre</h1>
-        <div class="row">
+        <div class="row col-avis">
             <div class="column">
                 <div class="card">
                     <img src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8cmFuZG9tJTIwcGVvcGxlfGVufDB8fDB8fHww"
