--- a/index.html
+++ b/index.html
@@ -96,80 +96,123 @@
         <div class="row col-avis">
             <div class="column">
                 <div class="card">
-                    <img src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8cmFuZG9tJTIwcGVvcGxlfGVufDB8fDB8fHww"
-                        alt="photo de profile">
+                    <div class="pp"><img
+                            src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8cmFuZG9tJTIwcGVvcGxlfGVufDB8fDB8fHww"
+                            alt="photo de profile"></div>
                     <div class="column">
                         <div class="row">
-                            <p class="nom">Nom</p>
-                            <p class="aro">@nom</p>
+                            <p class="nom">Sophie Mar</p>
+                            <p class="aro">@sophiemartin123</p>
                             <i class="fa-solid fa-circle"></i>
-                            <p class="date">11 Juin</p>
+                            <p class="date">3 Mars</p>
                         </div>
-                        <p class="message">Lorem ipsum dolor sit, <span>@vthi</span> consectetur adipisicing elit. Non,
-                            nemo numquam
-                            deserunt itaque atque est! In placeat nemo dignissimos?</p>
+                        <p class="message">Une expérience incroyable à l'exposition "Voyage à travers l'Histoire de
+                            l'Informatique" ! J'ai été captivée par l'évolution des technologies qui ont sculpté notre
+                            monde numérique. Bravo à <span>@vthi</span> pour cette immersion enrichissante dans le passé
+                            informatique.</p>
                     </div>
                 </div>
                 <div class="card">
-                    <img src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8cmFuZG9tJTIwcGVvcGxlfGVufDB8fDB8fHww"
-                        alt="photo de profile">
+                    <div class="pp"><img
+                            src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8cmFuZG9tJTIwcGVvcGxlfGVufDB8fDB8fHww"
+                            alt="photo de profile"></div>
                     <div class="column">
                         <div class="row">
-                            <p class="nom">Nom</p>
-                            <p class="aro">@nom</p>
+                            <p class="nom">Alexandre Dpt</p>
+                            <p class="aro">@alexdupont456</p>
                             <i class="fa-solid fa-circle"></i>
-                            <p class="date">11 Juin</p>
+                            <p class="date">4 Mars</p>
                         </div>
-                        <p class="message">Lorem ipsum dolor sit, <span>@vthi</span> consectetur adipisicing elit. Non,
-                            nemo numquam
-                            deserunt itaque atque est! In placeat nemo dignissimos?</p>
+                        <p class="message">Fascinant ! L'exposition offre une perspective unique sur l'histoire de
+                            l'informatique. Chaque étape est soigneusement présentée, permettant aux visiteurs de
+                            comprendre pleinement l'évolution technologique. Merci à <span>@vthi</span> pour cette
+                            expérience éducative et divertissante.</p>
                     </div>
                 </div>
             </div>
             <div class="column">
                 <div class="card">
-                    <img src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8cmFuZG9tJTIwcGVvcGxlfGVufDB8fDB8fHww"
-                        alt="photo de profile">
+                    <div class="pp"><img
+                            src="https://images.unsplash.com/photo-1508214751196-bcfd4ca60f91?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTV8fHJhbmRvbSUyMHBlb3BsZXxlbnwwfHwwfHx8MA%3D%3D"
+                            alt="photo de profile"></div>
                     <div class="column">
                         <div class="row">
-                            <p class="nom">Nom</p>
-                            <p class="aro">@nom</p>
+                            <p class="nom">Isabelle Lamb</p>
+                            <p class="aro">@isalambert789</p>
                             <i class="fa-solid fa-circle"></i>
-                            <p class="date">11 Juin</p>
+                            <p class="date">5 Mars</p>
                         </div>
-                        <p class="message">Lorem ipsum dolor sit, <span>@vthi</span> consectetur adipisicing elit. Non,
-                            nemo numquam
-                            deserunt itaque atque est! In placeat nemo dignissimos?</p>
+                        <p class="message">Une plongée immersive dans le passé technologique ! L'exposition "Voyage à
+                            travers l'Histoire de l'Informatique" est un incontournable. Un grand merci
+                            <span>@vthi</span> pour cette exploration captivante des racines de notre univers numérique
+                            moderne.
+                        </p>
                     </div>
                 </div>
                 <div class="card">
-                    <img src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8cmFuZG9tJTIwcGVvcGxlfGVufDB8fDB8fHww"
-                        alt="photo de profile">
+                    <div class="pp"><img
+                            src="https://images.unsplash.com/photo-1530268729831-4b0b9e170218?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fHJhbmRvbSUyMHBlb3BsZXxlbnwwfHwwfHx8MA%3D%3Dw"
+                            alt="photo de profile"></div>
                     <div class="column">
                         <div class="row">
-                            <p class="nom">Nom</p>
-                            <p class="aro">@nom</p>
+                            <p class="nom">Nicolas</p>
+                            <p class="aro">@nicolasleroux101</p>
                             <i class="fa-solid fa-circle"></i>
-                            <p class="date">11 Juin</p>
+                            <p class="date">6 Mars</p>
                         </div>
-                        <p class="message">Lorem ipsum dolor sit, <span>@vthi</span> consectetur adipisicing elit. Non,
-                            nemo numquam
-                            deserunt itaque atque est! In placeat nemo dignissimos?</p>
+                        <p class="message">Une expérience éducative remarquable ! L'exposition offre une vision
+                            détaillée de l'évolution des machines et des technologies. Merci à <span>@vthi</span>
+                            pour avoir rendu cette plongée dans l'histoire de l'informatique si enrichissante.</p>
                     </div>
                 </div>
                 <div class="card">
-                    <img src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8cmFuZG9tJTIwcGVvcGxlfGVufDB8fDB8fHww"
-                        alt="photo de profile">
+                    <div class="pp"><img
+                            src="https://images.unsplash.com/photo-1517841905240-472988babdf9?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fHJhbmRvbSUyMHBlb3BsZXxlbnwwfHwwfHx8MA%3D%3D"
+                            alt="photo de profile"></div>
                     <div class="column">
                         <div class="row">
-                            <p class="nom">Nom</p>
-                            <p class="aro">@nom</p>
+                            <p class="nom">Laura Li</p>
+                            <p class="aro">@laurapetit222</p>
                             <i class="fa-solid fa-circle"></i>
-                            <p class="date">11 Juin</p>
+                            <p class="date">7 Mars</p>
                         </div>
-                        <p class="message">Lorem ipsum dolor sit, <span>@vthi</span> consectetur adipisicing elit. Non,
-                            nemo numquam
-                            deserunt itaque atque est! In placeat nemo dignissimos?</p>
+                        <p class="message">Bravo ! L'exposition "Voyage à travers l'Histoire de l'Informatique" est une
+                            expérience inoubliable. J'ai appris énormément et été inspirée par le chemin parcouru. Merci
+                            à <span>@vthi</span> pour cette aventure éclairante !</p>
+                    </div>
+                </div>
+            </div>
+            <div class="column">
+                <div class="card">
+                    <div class="pp"><img
+                            src="https://images.unsplash.com/photo-1499996860823-5214fcc65f8f?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTh8fHJhbmRvbSUyMHBlb3BsZXxlbnwwfHwwfHx8MA%3D%3D"
+                            alt="photo de profile"></div>
+                    <div class="column">
+                        <div class="row">
+                            <p class="nom">Thomas</p>
+                            <p class="aro">@thomasdubois333</p>
+                            <i class="fa-solid fa-circle"></i>
+                            <p class="date">8 Mars</p>
+                        </div>
+                        <p class="message">Exceptionnel ! L'exposition offre une perspective approfondie sur l'évolution
+                            de l'informatique. Chaque étape est présentée de manière captivante. Merci à
+                            <span>@vthi</span> pour cette plongée dans le passé technologique.
+                        </p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="pp"><img
+                            src="https://images.unsplash.com/photo-1488426862026-3ee34a7d66df?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTR8fHJhbmRvbSUyMHBlb3BsZXxlbnwwfHwwfHx8MA%3D%3D"
+                            alt="photo de profile"></div>
+                    <div class="column">
+                        <div class="row">
+                            <p class="nom">Marie Lec</p>
+                            <p class="aro">@marieleclerc444</p>
+                            <i class="fa-solid fa-circle"></i>
+                            <p class="date">9 Mars</p>
+                        </div>
+                        <p class="message"><span>@vthi</span> Une expérience qui vaut le détour ! L'exposition est une
+                            véritable odyssée à travers les progrès de l'informatique</p>
                     </div>
                 </div>
             </div>
