--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li><a href="#expo">Exposition</a></li>
             <li><a href="#personnel">Personnel</a></li>
             <li><a href="#avis">Avis</a></li>
-            <li><a href="#">FAQ</a></li>
+            <li><a href="#faq">FAQ</a></li>
         </ul>
         <ul class="nav_links">
             <li><a href="" class="login">Contactez-nous</a></li>
@@ -216,6 +216,82 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <section id="faq">
+        <h1>Questions fréquentes</h1>
+        <div class="question">
+            <p class="title">Quelle est la thématique principale de l'exposition ?</p>
+            <p class="subject">Thématique</p>
+            <p class="date">2024-03-10</p>
+            <div class="pp"><img
+                    src="https://randomuser.me/api/portraits/men/76.jpg"
+                    alt="photo de profile"></div>
+        </div>
+        <div class="question">
+            <p class="title">Comment l'exposition explore-t-elle l'évolution des technologies informatiques ?</p>
+            <p class="subject">Évolution technologique</p>
+            <p class="date">2024-03-10</p>
+            <div class="pp"><img
+                    src="https://randomuser.me/api/portraits/women/26.jpg"
+                    alt="photo de profile"></div>
+        </div>
+        <div class="question">
+            <p class="title">Qui est le principal organisateur de l'exposition ?</p>
+            <p class="subject">Organisateur</p>
+            <p class="date">2024-03-10</p>
+            <div class="pp"><img
+                    src="https://randomuser.me/api/portraits/women/56.jpg"
+                    alt="photo de profile"></div>
+        </div>
+        <div class="question">
+            <p class="title">Y a-t-il des activités interactives pour les visiteurs dans l'exposition ?</p>
+            <p class="subject">Activités interactives</p>
+            <p class="date">2024-03-10</p>
+            <div class="pp"><img
+                    src="https://randomuser.me/api/portraits/men/74.jpg"
+                    alt="photo de profile"></div>
+        </div>
+        <div class="question">
+            <p class="title">Quelle est la durée de la visite de l'exposition ?</p>
+            <p class="subject">Durée de visite</p>
+            <p class="date">2024-03-10</p>
+            <div class="pp"><img
+                    src="https://randomuser.me/api/portraits/women/44.jpg"
+                    alt="photo de profile"></div>
+        </div>
+        <div class="question">
+            <p class="title">Existe-t-il des tarifs réduits pour certains groupes de visiteurs ?</p>
+            <p class="subject">Tarifs réduits</p>
+            <p class="date">2024-03-10</p>
+            <div class="pp"><img
+                    src="https://randomuser.me/api/portraits/men/14.jpg"
+                    alt="photo de profile"></div>
+        </div>
+        <div class="question">
+            <p class="title">Où se déroule l'exposition ?</p>
+            <p class="subject">Lieu</p>
+            <p class="date">2024-03-10</p>
+            <div class="pp"><img
+                    src="https://randomuser.me/api/portraits/women/79.jpg"
+                    alt="photo de profile"></div>
+        </div>
+        <div class="question">
+            <p class="title">Y a-t-il des guides pour aider les visiteurs de l'exposition ?</p>
+            <p class="subject">Guides</p>
+            <p class="date">2024-03-10</p>
+            <div class="pp"><img
+                    src="https://images.unsplash.com/photo-1488426862026-3ee34a7d66df?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTR8fHJhbmRvbSUyMHBlb3BsZXxlbnwwfHwwfHx8MA%3D%3D"
+                    alt="photo de profile"></div>
+        </div>
+        <div class="question">
+            <p class="title">Comment puis-je obtenir des informations mises à jour sur l'exposition et d'éventuelles modifications d'horaire ?</p>
+            <p class="subject">Informations mises à jour</p>
+            <p class="date">2024-03-10</p>
+            <div class="pp"><img
+                    src="https://randomuser.me/api/portraits/men/27.jpg"
+                    alt="photo de profile"></div>
         </div>
     </section>
 </body>
