--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             <li><a href="#faq">FAQ</a></li>
         </ul>
         <ul class="nav_links">
-            <li><a href="" class="login">Contactez-nous</a></li>
-            <li><a href="" class="signup btn">Billeterie</a></li>
+            <li><a href="/contact.html" class="login">Contactez-nous</a></li>
+            <li><a href="/billeterie.html" class="signup btn">Billeterie</a></li>
         </ul>
     </header>
 
@@ -39,7 +39,7 @@
         <h1>Bienvenue à notre exposition captivante.</h1>
         <p class="desc">Préparez-vous à un voyage dans le temps qui célèbre le passé, le présent et l'avenir passionnant
             de l'informatique.</p>
-        <a href="#" class="btn">Prendre ma place <i class="fa-solid fa-chevron-right"></i></a>
+        <a href="/billeterie.html" class="btn">Prendre ma place <i class="fa-solid fa-chevron-right"></i></a>
     </section>
 
     <section id="expo">
@@ -293,6 +293,7 @@
                     src="https://randomuser.me/api/portraits/men/27.jpg"
                     alt="photo de profile"></div>
         </div>
+        <a href="/contact.html" class="btn">Nous contacter <i class="fa-solid fa-chevron-right"></i></a>
     </section>
 </body>
 
