--- a/contact.html
+++ b/contact.html
@@ -29,6 +29,29 @@
             <li><a href="/billeterie.html" class="signup btn">Billeterie</a></li>
         </ul>
     </header>
+
+    <section id="contact">
+        <div class="row">
+            <h1>Contacter les <br> organisateurs</h1>
+            <form method="post">
+                <div class="top">
+                    <h2>Dites-nous comment vous aidez</h2>
+                </div>
+                <div class="content">
+                    <label for="name">Nom et prénom</label>
+                    <input type="text" id="name" name="name" required>
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" required>
+                    <label for="message">Message</label>
+                    <textarea type="email" id="message" name="message" required></textarea>
+                    <div class="row">
+                        <p>Vous pouvez aussi envoyer un message <br> à <a href="mailto:vthi@gmail.com">vthi@gmail.com</a></p>
+                        <input type="button" value="Envoyer" class="btn">
+                    </div>
+                </div>
+            </form>
+        </div>
+    </section>
 </body>
 
 </html>
