--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         <div class="question">
             <p class="title">Quelle est la thématique principale de l'exposition ?</p>
             <p class="subject">Thématique</p>
-            <p class="date">2024-03-10</p>
+            <p class="date">9 Mars</p>
             <div class="pp"><img
                     src="https://randomuser.me/api/portraits/men/76.jpg"
                     alt="photo de profile"></div>
@@ -232,7 +232,7 @@
         <div class="question">
             <p class="title">Comment l'exposition explore-t-elle l'évolution des technologies informatiques ?</p>
             <p class="subject">Évolution technologique</p>
-            <p class="date">2024-03-10</p>
+            <p class="date">12 Mars</p>
             <div class="pp"><img
                     src="https://randomuser.me/api/portraits/women/26.jpg"
                     alt="photo de profile"></div>
@@ -240,7 +240,7 @@
         <div class="question">
             <p class="title">Qui est le principal organisateur de l'exposition ?</p>
             <p class="subject">Organisateur</p>
-            <p class="date">2024-03-10</p>
+            <p class="date">15 Mars</p>
             <div class="pp"><img
                     src="https://randomuser.me/api/portraits/women/56.jpg"
                     alt="photo de profile"></div>
@@ -248,7 +248,7 @@
         <div class="question">
             <p class="title">Y a-t-il des activités interactives pour les visiteurs dans l'exposition ?</p>
             <p class="subject">Activités interactives</p>
-            <p class="date">2024-03-10</p>
+            <p class="date">6 Mars</p>
             <div class="pp"><img
                     src="https://randomuser.me/api/portraits/men/74.jpg"
                     alt="photo de profile"></div>
@@ -256,7 +256,7 @@
         <div class="question">
             <p class="title">Quelle est la durée de la visite de l'exposition ?</p>
             <p class="subject">Durée de visite</p>
-            <p class="date">2024-03-10</p>
+            <p class="date">21 Mars</p>
             <div class="pp"><img
                     src="https://randomuser.me/api/portraits/women/44.jpg"
                     alt="photo de profile"></div>
@@ -264,7 +264,7 @@
         <div class="question">
             <p class="title">Existe-t-il des tarifs réduits pour certains groupes de visiteurs ?</p>
             <p class="subject">Tarifs réduits</p>
-            <p class="date">2024-03-10</p>
+            <p class="date">21 Mars</p>
             <div class="pp"><img
                     src="https://randomuser.me/api/portraits/men/14.jpg"
                     alt="photo de profile"></div>
@@ -272,7 +272,7 @@
         <div class="question">
             <p class="title">Où se déroule l'exposition ?</p>
             <p class="subject">Lieu</p>
-            <p class="date">2024-03-10</p>
+            <p class="date">3 Mars</p>
             <div class="pp"><img
                     src="https://randomuser.me/api/portraits/women/79.jpg"
                     alt="photo de profile"></div>
@@ -280,7 +280,7 @@
         <div class="question">
             <p class="title">Y a-t-il des guides pour aider les visiteurs de l'exposition ?</p>
             <p class="subject">Guides</p>
-            <p class="date">2024-03-10</p>
+            <p class="date">27 Mars</p>
             <div class="pp"><img
                     src="https://images.unsplash.com/photo-1488426862026-3ee34a7d66df?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTR8fHJhbmRvbSUyMHBlb3BsZXxlbnwwfHwwfHx8MA%3D%3D"
                     alt="photo de profile"></div>
@@ -288,7 +288,7 @@
         <div class="question">
             <p class="title">Comment puis-je obtenir des informations mises à jour sur l'exposition et d'éventuelles modifications d'horaire ?</p>
             <p class="subject">Informations mises à jour</p>
-            <p class="date">2024-03-10</p>
+            <p class="date">30 Mars</p>
             <div class="pp"><img
                     src="https://randomuser.me/api/portraits/men/27.jpg"
                     alt="photo de profile"></div>
