billeterie page add

--- a/billeterie.html
+++ b/billeterie.html
@@ -29,6 +29,46 @@
             <li><a href="/billeterie.html" class="signup btn">Billeterie</a></li>
         </ul>
     </header>
+
+    <section id="billeterie">
+        <h1>Prendre un billet pour <br> l'exposition</h1>
+        <div class="billet">
+            <div class="billet_type">
+                <h2>Billet Standard</h2>
+                <p>Accès complet à l'exposition, pour découvrir
+                    l'histoire de l'informatique.</p>
+                <p>10 €</p>
+            </div>
+            <div class="billet_type">
+                <h2>Billet VIP</h2>
+                <p>Une expérience exclusive avec un accès prioritaire, une visite guidée
+                    personnalisée et des zones spéciales réservées.</p>
+                <p>25 €</p>
+            </div>
+            <div class="billet_type">
+                <h2>Billet Famille</h2>
+                <p>Parfait pour les familles, pour profiter de l'exposition ensemble à
+                    un tarif avantageux.</p>
+                <p>40 € (pour 2 adultes et 2 enfants)</p>
+            </div>
+            <div class="billet_type">
+                <h2>Billet Étudiant</h2>
+                <p>Tarif réduit pour les étudiants qui veulent explorer l'exposition.</p>
+                <p>8 €</p>
+            </div>
+            <div class="billet_type">
+                <h2>Billet Groupe</h2>
+                <p>Tarifs avantageux pour les visites en groupe de 10
+                    personnes ou plus.</p>
+                <p>7 € par personne</p>
+            </div>
+            <div class="billet_type">
+                <h2>Billet Enfant</h2>
+                <p>Les enfants de moins de 12 ans bénéficient d'un accès gratuit à l'exposition.</p>
+                <p>Gratuit</p>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
