some responsive add

--- a/billeterie.html
+++ b/billeterie.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="left">
-            <i class="fa-solid fa-crosshairs"></i>
+            <img src="Icon.svg" alt="icon" height="28" width="28" />
             <a href="#" class="title">
                 Voyage à travers <br> l'Histoire de l'Informatique
             </a>
@@ -54,7 +54,7 @@
             <div class="billet_type">
                 <h2>Billet Étudiant</h2>
                 <p>Tarif réduit pour les étudiants qui veulent explorer l'exposition.</p>
-                <p>8 €</p>
+                <p>5 €</p>
             </div>
             <div class="billet_type">
                 <h2>Billet Groupe</h2>
