--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="left">
-            <i class="fa-solid fa-crosshairs"></i>
+            <img src="Icon.svg" alt="icon" height="28" width="28" />
             <a href="#" class="title">
                 Voyage à travers <br> l'Histoire de l'Informatique
             </a>
