--- a/index.html
+++ b/index.html
@@ -30,6 +30,17 @@
         </ul>
     </header>
 
+
+    <div class="header_responsive">
+        <div class="left">
+            <img src="Icon.svg" alt="icon" height="28" width="28" />
+            <a href="#" class="title">
+                Voyage à travers <br> l'Histoire de l'Informatique
+            </a>
+        </div>
+    </div>
+    <i class="fa-solid fa-bars menu_hamburger"></i>
+
     <section id="home">
         <div class="ads">
             <p>
@@ -263,6 +274,8 @@
         </div>
         <a href="/contact.html" class="btn">Nous contacter <i class="fa-solid fa-chevron-right"></i></a>
     </section>
+
+    <script src="index.js"></script>
 </body>
 
 </html>
