responsive contact page add

--- a/billeterie.html
+++ b/billeterie.html
@@ -7,6 +7,7 @@
     <title>Voyage à travers l'Histoire de l'Informatique</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/7a0b90407e.js" crossorigin="anonymous"></script>
+    <link rel="icon" href="Icon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -29,6 +30,16 @@
             <li><a href="/billeterie.html" class="signup btn">Billeterie</a></li>
         </ul>
     </header>
+
+    <div class="header_responsive">
+        <div class="left">
+            <img src="Icon.svg" alt="icon" height="28" width="28" />
+            <a href="#" class="title">
+                Voyage à travers <br> l'Histoire de l'Informatique
+            </a>
+        </div>
+    </div>
+    <i class="fa-solid fa-bars menu_hamburger"></i>
 
     <section id="billeterie">
         <h1>Prendre un billet pour <br> l'exposition</h1>
@@ -69,6 +80,8 @@
             </div>
         </div>
     </section>
+    
+    <script src="index.js"></script>
 </body>
 
 </html>
