--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Voyage à travers l'Histoire de l'Informatique</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/7a0b90407e.js" crossorigin="anonymous"></script>
+    <link rel="icon" href="Icon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -29,7 +30,6 @@
             <li><a href="/billeterie.html" class="signup btn">Billeterie</a></li>
         </ul>
     </header>
-
 
     <div class="header_responsive">
         <div class="left">
