--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
     <title>Voyage à travers l'Histoire de l'Informatique</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/7a0b90407e.js" crossorigin="anonymous"></script>
+    <link rel="icon" href="Icon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -30,6 +31,16 @@
         </ul>
     </header>
 
+    <div class="header_responsive">
+        <div class="left">
+            <img src="Icon.svg" alt="icon" height="28" width="28" />
+            <a href="#" class="title">
+                Voyage à travers <br> l'Histoire de l'Informatique
+            </a>
+        </div>
+    </div>
+    <i class="fa-solid fa-bars menu_hamburger"></i>
+
     <section id="contact">
         <div class="row">
             <h1>Contacter les <br> organisateurs</h1>
@@ -45,13 +56,16 @@
                     <label for="message">Message</label>
                     <textarea type="email" id="message" name="message" required></textarea>
                     <div class="row">
-                        <p>Vous pouvez aussi envoyer un message <br> à <a href="mailto:vthi@gmail.com">vthi@gmail.com</a></p>
+                        <p>Vous pouvez aussi envoyer un message <br> à <a
+                                href="mailto:vthi@gmail.com">vthi@gmail.com</a></p>
                         <input type="button" value="Envoyer" class="btn">
                     </div>
                 </div>
             </form>
         </div>
     </section>
+
+    <script src="index.js"></script>
 </body>
 
 </html>
